[gd_scene load_steps=4 format=3 uid="uid://e8q7a6kfi5vwe"]

[ext_resource type="Script" path="res://src/ui/screens/battle/TestPreBattle.gd" id="1_script"]
[ext_resource type="PackedScene" path="res://src/ui/components/mission/MissionInfoPanel.tscn" id="2_mission_info"]
[ext_resource type="PackedScene" path="res://src/ui/components/mission/EnemyInfoPanel.tscn" id="3_enemy_info"]

[node name="TestPreBattle" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_script")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="MissionInfo" parent="HBoxContainer" instance=ExtResource("2_mission_info")]
layout_mode = 2
size_flags_horizontal = 3

[node name="EnemyInfo" parent="HBoxContainer" instance=ExtResource("3_enemy_info")]
layout_mode = 2
size_flags_horizontal = 3

[node name="CrewSelection" type="PanelContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"DarkPanel" 